<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_textview">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="page_1_title">Username: %1$s</string>
    <string name="page_1_toolbar_title">Random number example</string>
    <string name="page_2_title">Page 2</string>
    <string name="page_2_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_login">Login</string>
    <string name="login_empty_edit_text_messaje">Los campos de correo electronico y contraseña son requeridos</string>
    <string name="login_empty_email">El campo de correo electronico es requerido</string>
    <string name="login_empty_password">El campo de contraseña es requerido</string>
    <string name="login_invalid_email">Correo electronico invalido</string>
    <string name="login_email">example@domain.com</string>
    <string name="login_preferences_name">ar.com.wolox.android.example.ui.login</string>
    <string name="login_username">usuario</string>
    <string name="login_password">contraseña</string>
    <string name="login_button_login">LOG IN</string>
    <string name="login_button_signup">SIGN UP</string>
    <string name="login_terms_and_conditions">By joing you agree to our <u>Terms &amp; Conditions</u></string>
    <string name="login_invalid_password">Contraseña invalida</string>
    <string name="login_invalid_user">Usuario invalido</string>
    <string name="login_failed">Algo salió mal … ¡Intenta más tarde!</string>
    <string name="password_required">Password is Required</string>
    <string name="home_activity">HOME</string>
    <string name="home_title">Wolox</string>
    <string name="home_profile">PROFILE</string>
    <string name="hhome_profile_fragment">Profile</string>
    <string name="home_news">NEWS</string>
    <string name="home_news_fragment">News</string>
    <string name="signup_activity">SIGN UP</string>
    <string name="photo_item">Photo Item</string>
    <string name="like_item">Like Item</string>
    <string name="fail_loading_news">Failed connection</string>
    <string name="fail_generic">Generic Error</string>
    <string name="new_details_image">In this space is the image of the news</string>
    <string name="vNewsDetailsTopText">Post</string>
    <string name="login_server_error">Failed connection to Server</string>


</resources>