<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/vLoginLogoCover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_cover"
            android:foreground="@drawable/cover_gradient" />

        <ImageView
            android:id="@+id/vLoginWoloxLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/login_cover_logo_height"
            android:adjustViewBounds="false"
            android:gravity="bottom|center_horizontal"
            android:src="@drawable/wolox_logo_large" />

    </RelativeLayout>

    <EditText
        android:id="@+id/vLogInEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:hint="@string/login_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/vLogInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textWebPassword" />

    <Button
        android:id="@+id/vLogInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/wolox_white"
        android:gravity="center"
        android:text="@string/login_button_login" />

    <Button
        android:id="@+id/vSignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/wolox_blue"
        android:gravity="center"
        android:text="@string/login_button_signup"
        android:textColor="@color/wolox_white" />

    <ProgressBar
        android:id="@+id/vLoginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/vTermsConditions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:text="@string/login_terms_and_conditions"
        android:textAlignment="center" />
</LinearLayout>
